add Message class